--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ p{
 
 div.conteudo{
     margin-top: 1rem;
-    background-color: aliceblue;
+    background-color: white;
     border-radius: 10px;
     box-shadow: 5px 10px 50px black;
 }
@@ -49,7 +49,7 @@ div.conteudo{
 #botao{
     position: relative;
     margin-top: 0.5rem;
-    padding: 1rem;
+    padding: 0.5rem;
     margin-left: -2.5rem;
 }
 
@@ -86,8 +86,26 @@ button:hover{
 }
 
 
-@media screen and (max-width: 700px){
+@media (max-width: 700px){
     .info{
         flex-direction: column;
     }
 }
+
+@media (max-width: 500px){
+    .conteudo{
+        width: 80%;
+    }
+
+    button{
+        width: 15rem;
+    }
+
+    #resultadoImc{
+        margin-left: -3rem;
+        width: 80%;
+    }
+}
+
+
+
